--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
+  "version": 2,
   "builds": [
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
+    {
+      "src": "/manifest\\.json",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
   ]
 }
