--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
    "main": "index.js",
    "scripts": {
     "start": "node index.js",
-    "build": "echo \"No build step required when using Vercel builder\""
+    "build": "echo \"No build step required when using Vercel builder\"",
+    "build-kodi": "make -C kodi"
    },
   "directories": {
     "doc": "docs"
